--- a/core_blog/templates/core_blog/layout.html
+++ b/core_blog/templates/core_blog/layout.html
@@ -12,19 +12,19 @@
 
     <title>Clean Blog - Start Bootstrap Theme</title>
 
-    <img src="{% static 'my_app/example.jpg' %}" alt="My image"/>
+    <img src="{% static 'core_blog/my_app/example.jpg' %}" alt="My image"/>
 
     <!-- Bootstrap core CSS -->
 
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'core_blog/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'core_blog/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/clean-blog.min.css' %}" rel="stylesheet">
+    <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet">
 
   </head>
 
@@ -33,7 +33,7 @@
     {% include 'core_blog/navbar.html' %}
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('{% static "img/home-bg.jpg" %})">
+    <header class="masthead" style="background-image: url({% static 'core_blog/img/home-bg.jpg' %} )">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -53,11 +53,11 @@
     {% include 'core_blog/footer.html' %}
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static "vendor/jquery/jquery.min.js" %}"></script>
+    <script src="{% static "vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="{% static "js/clean-blog.min.js" %}"></script>
 
   </body>
 
