--- a/core_blog/templates/core_blog/layout.html
+++ b/core_blog/templates/core_blog/layout.html
@@ -53,11 +53,11 @@
     {% include 'core_blog/footer.html' %}
 
     <!-- Bootstrap core JavaScript -->
-    <script src="{% static "vendor/jquery/jquery.min.js" %}"></script>
-    <script src="{% static "vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+    <script src="{% static 'core_blog/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'core_blog/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="{% static "js/clean-blog.min.js" %}"></script>
+    <script src="{% static 'core_blog/js/clean-blog.min.js' %}"></script>
 
   </body>
 
