--- a/core_blog/templates/core_blog/create_post.html
+++ b/core_blog/templates/core_blog/create_post.html
@@ -1,8 +1,24 @@
 {% extends "core_blog/layout.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-<form action="." method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-</form>
+<div class="row h-100 justify-content-center align-items-center">
+    <form id="editor" action="." method="POST">
+        {% csrf_token %}
+        {{ form| crispy }}
+        <input type="submit" value="Submit" />
+    </form>
+</div>
 {% endblock content %}
+
+{% block js %}
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
+
+    <!-- Initialize Quill editor -->
+    <script>
+        var quill = new Quill('#id_content', {
+        theme: 'snow'
+        });
+    </script>
+{% endblock js %}
