--- a/core_blog/templates/core_blog/layout.html
+++ b/core_blog/templates/core_blog/layout.html
@@ -24,6 +24,8 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet">
 
+    <link href="https://cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
+
   </head>
 
   <body>
@@ -53,9 +55,10 @@
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'core_blog/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'core_blog/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
+    {% block js %}
     <!-- Custom scripts for this template -->
     <script src="{% static 'core_blog/js/clean-blog.min.js' %}"></script>
+    {% endblock js %}
 
   </body>
 
