--- a/core_blog/templates/core_blog/create_post.html
+++ b/core_blog/templates/core_blog/create_post.html
@@ -17,8 +17,8 @@
 
     <!-- Initialize Quill editor -->
     <script>
-        var quill = new Quill('#id_content', {
+      var editor = new Quill('#div_id_content', {
         theme: 'snow'
-        });
+      });
     </script>
 {% endblock js %}
