--- a/core_blog/templates/core_blog/create_post.html
+++ b/core_blog/templates/core_blog/create_post.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="row h-100 justify-content-center align-items-center">
-    <form id="editor" action="." method="POST">
+    <form id="editor" action="." method="POST" novalidate>
         {% csrf_token %}
         {{ form| crispy }}
         <input type="submit" value="Submit" />
