--- a/core_blog/templates/core_blog/layout.html
+++ b/core_blog/templates/core_blog/layout.html
@@ -39,8 +39,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Clean Blog</h1>
-              <span class="subheading">A Blog Theme by Start Bootstrap</span>
+              <h1>Fosstack</h1>
+              <span class="subheading">A Blog for Pythonista by Pycopath.</span>
             </div>
           </div>
         </div>
