--- a/core_blog/templates/core_blog/layout.html
+++ b/core_blog/templates/core_blog/layout.html
@@ -26,6 +26,9 @@
 
     <link href="https://cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
 
+     <link href="{% static "styles/github.css" %}" rel="stylesheet">
+
+
   </head>
 
   <body>
@@ -57,6 +60,9 @@
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'core_blog/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'core_blog/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static "highlight.pack.js" %}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
     {% block js %}
     <!-- Custom scripts for this template -->
     <script src="{% static 'core_blog/js/clean-blog.min.js' %}"></script>
