--- a/core_blog/templates/core_blog/list_posts.html
+++ b/core_blog/templates/core_blog/list_posts.html
@@ -20,7 +20,7 @@
           </div>
           {% for post in posts %}
               <div class="post-preview">
-                <a href="post.html">
+                <a href="{{ post.get_absolute_url }}">
                   <h2 class="post-title">
                     {{ post.title }}
                   </h2>
