--- a/core_blog/templates/core_blog/post_form.html
+++ b/core_blog/templates/core_blog/post_form.html
@@ -2,6 +2,14 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block css %}
+    <style type="text/css">
+        .asteriskField {
+            display: none;
+        }
+    </style>
+{% endblock css %}
+
 {% block content %}
 
 
