--- a/core_blog/templates/core_blog/layout.html
+++ b/core_blog/templates/core_blog/layout.html
@@ -23,7 +23,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet">
-    <link href="{% static 'core_blog/styles/github.css' %}" rel="stylesheet">
+    <link href="{% static 'core_blog/css/github.css' %}" rel="stylesheet">
 
     {% block css %}
     {% endblock css %}
@@ -61,7 +61,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'core_blog/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'core_blog/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-      <script src="{% static "highlight.pack.js" %}"></script>
+    <script src="{% static 'core_blog/js/highlight.pack.js' %}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     {% block js %}
