changed post_detail page

--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -3,7 +3,7 @@
 
 {% block header %}
   <!-- Page Header -->
-    <header class="masthead" style="background-image: url({% static 'core_blog/img/post-bg.jpg' %} )">
+    <header class="masthead" style="background-color:cyan; )">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -22,7 +22,6 @@
 {% endblock header %}
 
 {% block content %}
-    <!-- Post Content -->
     <article>
       <div class="container">
         <div class="row">
