--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -9,16 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="post.html">Posts</a>
+          <a class="nav-link" href="{% url 'post_list' %}">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="/">Contact</a>
         </li>
       </ul>
     </div>
