--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -12,11 +12,10 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-<<<<<<< 27e7b511f28e79f87fc000c562a9bbc110926ad9
           <a class="nav-link" href="{% url 'back_office:about' %}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'back:post_list' %}">Posts</a>
+          <a class="nav-link" href="{% url 'blog:post_list' %}">Posts</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'back_office:contact' %}">Contact</a>
