Add proper page title

--- a/back_office/templates/back_office/about.html
+++ b/back_office/templates/back_office/about.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 {% load static %}
 
+{% block title %}
+  {{ page_title }} - {{ block.super }}
+{% endblock title %}
+
 {% block header %}
     <!-- Page Header -->
     <header class="masthead" style="background-image: url({% static 'core_blog/img/about-bg.jpg' %})">
@@ -30,7 +34,5 @@
         </div>
       </div>
     </div>
-
-    <hr>
 {% endblock content %}
 
