--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 {% load static %}
 
+{% block title %}
+  {{ page_title }} - {{ block.super }}
+{% endblock title %}
+
 {% block header %}
   <!-- Page Header -->
     <header class="masthead" style="background-color:cyan; )">
