--- a/core_blog/templates/core_blog/post_form.html
+++ b/core_blog/templates/core_blog/post_form.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+  {{ page_title }} - {{ block.super }}
+{% endblock title %}
+
 {% block css %}
     <style type="text/css">
         .asteriskField {
