--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,9 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Fosstack Blog</title>
-
+    <title>
+    {% block title %}
+      Fosstack Blog
+    {% endblock title %}
+    </title>
     <!-- Bootstrap core CSS -->
 
     <link href="{% static 'core_blog/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
