--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'back_office:about' %}">About</a>
+          <a class="nav-link" href="{% url 'blog:about' %}">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'blog:post_list' %}">Posts</a>
