--- a/back_office/templates/back_office/contact.html
+++ b/back_office/templates/back_office/contact.html
@@ -31,7 +31,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>Want to get in touch? Fill out the form below to send me a message and we will get back to you as soon as possible!</p>
 
-          <form method='post' novalidate>
+          <form method='post'>
             {% csrf_token %}
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
