--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -18,7 +18,7 @@
               <h2 class="subheading">{{ post.description }}</h2>
               <span class="meta">Posted by
                 <a href="#">{{ post.author|capfirst }}</a>
-                on {{ post.created_at|date:'F d, Y' }}</span>
+                on {{ post.publish|date:'F d, Y' }}</span>
             </div>
           </div>
         </div>
