--- a/core_blog/templates/core_blog/list_posts.html
+++ b/core_blog/templates/core_blog/list_posts.html
@@ -21,8 +21,15 @@
               </div>
           {% endfor %}
           <!-- Pager -->
-          <div class="clearfix">
-            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          <div class="d-flex justify-content-between">
+            {% if is_paginated %}
+              {% if page_obj.has_previous %}
+                  <a class="btn btn-primary" href="?page={{ page_obj.previous_page_number }}">Newer Posts &larr;</a>
+              {% endif %}
+              {% if page_obj.has_next %}
+                  <a class="btn btn-primary ml-auto" href="?page={{ page_obj.next_page_number }}">Older Posts &rarr;</a>
+              {% endif %}
+            {% endif %}
           </div>
         </div>
       </div>
