--- a/core_blog/templates/core_blog/blocks/footer.html
+++ b/core_blog/templates/core_blog/blocks/footer.html
@@ -29,7 +29,7 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+        <p class="copyright text-muted">Copyright &copy; Your Website {% now "Y" %}</p>
       </div>
     </div>
   </div>
