--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -19,14 +19,15 @@
                 {% if post.in_future %}
                   <span style="color: orange">future Post</span>
                 {% endif %}
-                {% if post.draft  %}
-                  <span style="color: red">draft</span>
-                {% endif %}
-              </h6>
               <h2 class="subheading">{{ post.description }}</h2>
               <span class="meta">Posted by
                 <a href="#">{{ post.author|capfirst }}</a>
-                on {{ post.publish|date:'F d, Y' }}</span>
+                on {{ post.publish|date:'F d, Y' }}
+                {% if post.draft  %}
+                  <span style="color: red">Draft</span>
+                {% endif %}
+              </h6>
+              </span>
             </div>
           </div>
         </div>
