--- a/core_blog/templates/core_blog/blocks/footer.html
+++ b/core_blog/templates/core_blog/blocks/footer.html
@@ -2,7 +2,18 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+      <div class="col-lg-8 col-md-10 mx-auto mb-3">
+        <form class="mb-4">
+    <div class="input-group">
+        <input type="email" placeholder="Enter your email here" class="form-control border border-secondary" required="required">
+        <span class="input-group-btn">
+            <button class="btn btn-outline-secondary" type="submit"><i class="fa fa-send"></i></button>
+        </span>
+    </div>
+</form>
+
+
+
         <ul class="list-inline text-center">
           <li class="list-inline-item">
             <a href="#">
@@ -29,7 +40,7 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted">Copyright &copy; Your Website {% now "Y" %}</p>
+        <p class="copyright text-muted">Copyright &copy; Fosstack {% now "Y" %}</p>
       </div>
     </div>
   </div>
