--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -3,7 +3,7 @@
 {% load disqus_tags %}
 
 {% block title %}
-  {{ page_title }} - {{ block.super }}
+  {{ page_title }} | {{ block.super }}
 {% endblock title %}
 
 {% block header %}
