--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -26,6 +26,11 @@
                 {% if post.draft  %}
                   <span style="color: red">Draft</span>
                 {% endif %}
+                {% if user.is_superuser or user.username == post.author__username %}
+                     &nbsp;<a href="{% url 'blog:post_update' post.slug %}">
+                      <i class="fa fa-pencil" aria-hidden="true"></i>
+                      </a>
+                {% endif %}
               </h6>
               </span>
             </div>
