remove unnecessary code

--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="{% url 'blog:post_list' %}">Tips</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'back_office:contact' %}">About</a>
+          <a class="nav-link" href="{% url 'blog:about' %}">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'back_office:contact' %}">Contact</a>
