refined subscribe form

--- a/core_blog/templates/core_blog/post_list.html
+++ b/core_blog/templates/core_blog/post_list.html
@@ -33,7 +33,11 @@
                    {% endif %}
                  </p>
               </div>
-              <br><hr><br>
+              {% if  forloop.last %}
+                  <br>
+              {% else %}
+                <br><hr><br>
+              {% endif %}
           {% endfor %}
           <!-- Pager -->
           <div class="d-flex justify-content-between">
