--- a/templates/blocks/search.html
+++ b/templates/blocks/search.html
@@ -1,8 +1,10 @@
 <form  class="col-lg-8 col-md-8 mx-auto">
     <div class="input-group">
-        <input autofocus type="text" name="q" value="{{ request.GET.q }}" placeholder="Search Fosstack" class="form-control border border-primary" required="required">
+        <input type="text" name="q" value="{{ request.GET.q }}" placeholder="Search Fosstack" class="form-control border border-primary" required="required">
         <span class="input-group-btn">
             <button class="btn btn-outline-primary" type="submit"><i class="fa fa-search"></i></button>
         </span>
     </div>
 </form><br>
+
+
