--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,13 +52,6 @@
 
   </head>
 
-  <script>
-        function snake_alert(msg,nature) {
-          var x = document.getElementById("snackbar");
-        if(nature == 'success'){x.style.backgroundColor = "green";} else if(nature == 'warning'){x.style.backgroundColor = "orange";} else{x.style.backgroundColor = "red";}
-        x.innerHTML = msg;x.className = "show";setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);}
-  </script>
-
   <body>
     <!-- Navigation -->
     {% include 'core_blog/blocks/navbar.html' %}
@@ -97,7 +90,14 @@
     <script src="{% static 'core_blog/js/highlight.pack.js' %}"></script>
     <script src="{% static 'app.js' %}"></script>
 
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script>hljs.initHighlightingOnLoad();
+
+function snake_alert(msg,nature) { var x = document.getElementById("snackbar");
+        if(nature == 'success'){x.style.backgroundColor = "green";} else if(nature == 'warning'){x.style.backgroundColor = "orange";} else{x.style.backgroundColor = "red";}
+        x.innerHTML = msg;x.className = "show";setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+}
+
+    </script>
 
     {% block js %}
     <!-- Custom scripts for this template -->
