--- a/templates/layout.html
+++ b/templates/layout.html
@@ -74,7 +74,7 @@
     {% endblock header %}
 
 
-    {% include 'blocks/search.html' %}
+    {# {% include 'blocks/search.html' %} #}
 
 
     {% block content %}
