--- a/core_blog/templates/core_blog/about.html
+++ b/core_blog/templates/core_blog/about.html
@@ -27,12 +27,25 @@
     <!-- Main Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
-        </div>
+
+          <div class="col-lg-3 col-md-5 col-sm-5  mx-auto">
+            <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US"  data-type="vertical" data-theme="light" data-vanity="karansthr"><a class="LI-simple-link" href='https://in.linkedin.com/in/karansthr?trk=profile-badge'>Karan Suthar</a>
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="col-lg-3 col-md-5 col-sm-5 mx-auto">
+            <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="mohi7solanki"><a class="LI-simple-link" href='https://in.linkedin.com/in/mohi7solanki?trk=profile-badge'>Mohit Solanki</a>
+            </div>
+          </div>
       </div>
     </div>
 {% endblock content %}
+
+
+{% block js %}
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js"></script>
+{% endblock js %}
+
 
