--- a/core_blog/templates/core_blog/about.html
+++ b/core_blog/templates/core_blog/about.html
@@ -26,16 +26,16 @@
 {% block content %}
     <!-- Main Content -->
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-center">
 
-          <div class="col-lg-3 col-md-5 col-sm-5  mx-auto">
+          <div class="col-lg-6 col-md-6 col-sm-6  mx-auto">
             <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US"  data-type="vertical" data-theme="light" data-vanity="karansthr"><a class="LI-simple-link" href='https://in.linkedin.com/in/karansthr?trk=profile-badge'>Karan Suthar</a>
             </div>
           </div>
 
           <hr>
 
-          <div class="col-lg-3 col-md-5 col-sm-5 mx-auto">
+          <div class="col-lg-6 col-md-6 col-sm-6 mx-auto">
             <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="mohi7solanki"><a class="LI-simple-link" href='https://in.linkedin.com/in/mohi7solanki?trk=profile-badge'>Mohit Solanki</a>
             </div>
           </div>
