--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'blog:post_list' %}">Python</a>
+          <a class="nav-link" href="{% url 'blog:category' 'python' %}">Python</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'blog:post_list' %}">Linux</a>
+          <a class="nav-link" href="{% url 'blog:category' 'linux' %}">Linux</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'blog:post_list' %}">Tips</a>
