--- a/core_blog/templates/core_blog/about.html
+++ b/core_blog/templates/core_blog/about.html
@@ -26,14 +26,14 @@
 {% block content %}
     <!-- Main Content -->
     <div class="container">
-      <div class="d-flex justify-content-around">
+      <div class="row justify-content-around">
 
-          <div>
+          <div class="col-xs-2 mb-3">
             <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US"  data-type="vertical" data-theme="light" data-vanity="karansthr"><a class="LI-simple-link" href='https://in.linkedin.com/in/karansthr?trk=profile-badge'>Karan Suthar</a>
             </div>
           </div>
 
-          <div>
+          <div class="col-xs-2">
             <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="mohi7solanki"><a class="LI-simple-link" href='https://in.linkedin.com/in/mohi7solanki?trk=profile-badge'>Mohit Solanki</a>
             </div>
           </div>
