--- a/core_blog/templates/core_blog/about.html
+++ b/core_blog/templates/core_blog/about.html
@@ -28,13 +28,13 @@
     <div class="container">
       <div class="row justify-content-around">
 
-          <div class="col-xs-2 mb-3">
-            <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US"  data-type="vertical" data-theme="light" data-vanity="karansthr"><a class="LI-simple-link" href='https://in.linkedin.com/in/karansthr?trk=profile-badge'>Karan Suthar</a>
+          <div class="shadow col-xs-2 mb-3">
+            <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US"  data-type="vertical" data-theme="dark" data-vanity="karansthr"><a class="LI-simple-link" href='https://in.linkedin.com/in/karansthr?trk=profile-badge'>Karan Suthar</a>
             </div>
           </div>
 
-          <div class="col-xs-2">
-            <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="mohi7solanki"><a class="LI-simple-link" href='https://in.linkedin.com/in/mohi7solanki?trk=profile-badge'>Mohit Solanki</a>
+          <div class="shadow col-xs-2">
+            <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="mohi7solanki"><a class="LI-simple-link" href='https://in.linkedin.com/in/mohi7solanki?trk=profile-badge'>Mohit Solanki</a>
             </div>
           </div>
       </div>
