--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -23,8 +23,32 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'back_office:contact' %}">Contact</a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link" href="#"  data-toggle="modal" data-target="#mkdocs_search_modal">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
+
+<div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="Search Modal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <form role="form">
+                    <div class="form-group">
+                        <input type="text" name="q" class="form-control" placeholder="Search..." id="mkdocs-search-query">
+                    </div>
+                </form>
+                <div id="mkdocs-search-results"></div>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
