added post_type and social sharer

--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -42,7 +42,7 @@
             <div class="modal-body">
                 <form role="form">
                     <div class="form-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search..." id="mkdocs-search-query">
+                        <input autofocus type="text" name="q" class="form-control" placeholder="Search..." id="mkdocs-search-query">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
