--- a/core_blog/templates/core_blog/post_detail.html
+++ b/core_blog/templates/core_blog/post_detail.html
@@ -46,6 +46,7 @@
         <div class="row">
           <div class="post_detail col-lg-8 col-md-10 mx-auto">
             {{ post.content | safe }}
+            {% include "core_blog/blocks/social.html" %}
             {% disqus_show_comments %}
           </div>
         </div>
