--- a/static/app.css
+++ b/static/app.css
@@ -3,7 +3,8 @@
 @media screen and (max-width: 650px) {
   .post-subtitle{
     font-size: 95%;
-
+    }
+}
 .shadow{-webkit-box-shadow: 0px 0px 129px -15px rgba(199,197,199,1);
 -moz-box-shadow: 0px 0px 129px -15px rgba(199,197,199,1);
 box-shadow: 0px 0px 129px -15px rgba(199,197,199,1);}
