added tips view and minified static files

--- a/core_blog/templates/core_blog/blocks/footer.html
+++ b/core_blog/templates/core_blog/blocks/footer.html
@@ -15,7 +15,7 @@
       </form>
         <ul class="list-inline text-center">
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://twitter.com/Fosstack">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://facebook.com/Fosstack">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://github.com/Fosstack">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
