--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,14 +25,14 @@
     <meta name="revisit-after" content="3 days">
     <!-- python,linux,FOSS -->
     <!-- For Facebook -->
-    <meta property="og:title" content="Fosstack - A Linux & Python Blog" />
+    <meta property="og:title" content="Fosstack Blog" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="" />
     <meta property="og:url" content="https://fosstack.com" />
     <meta property="og:description" content="At Fosstack we provide tutorials, news, security tips about FOSS world with focus on Linux, Python and Web Scraping." />
     <!-- For Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Fosstack - A Linux & Python Blog" />
+    <meta name="twitter:title" content="Fosstack Blog" />
     <meta name="twitter:description" content="At Fosstack we provide tutorials, news, security tips about FOSS world with focus on Linux, Python and tips" />
     {% endblock %}
 
@@ -53,7 +53,7 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet">
     <link href="{% static 'core_blog/css/github.css' %}" rel="stylesheet">
-    <link href="{% static 'app.css' %}" rel="stylesheet">
+    <link href="{% static 'app.min.css' %}" rel="stylesheet">
 
     {% block css %}
     {% endblock css %}
@@ -95,9 +95,9 @@
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'core_blog/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'core_blog/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'core_blog/js/clean-blog.min.js' %}"></script>
+    <script src="{% static 'app.min.js' %}"></script>
     <script src="{% static 'core_blog/js/highlight.pack.js' %}"></script>
-    <script src="{% static 'app.js' %}"></script>
-
     <script>hljs.initHighlightingOnLoad();</script>
 
     {% if messages %}
@@ -110,7 +110,6 @@
 
     {% block js %}
     <!-- Custom scripts for this template -->
-    <script src="{% static 'core_blog/js/clean-blog.min.js' %}"></script>
     {% endblock js %}
 
 
