--- a/core_blog/templates/core_blog/blocks/navbar.html
+++ b/core_blog/templates/core_blog/blocks/navbar.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="{% url 'blog:category' 'linux' %}">Linux</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'blog:post_list' %}">Tips</a>
+          <a class="nav-link" href="{% url 'blog:tip_list' %}">Tips</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'blog:about' %}">About</a>
