--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,17 +44,16 @@
     <!-- Bootstrap core CSS -->
 
     <link href="{% static 'core_blog/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom fonts for this template -->
-    <link href="{% static 'core_blog/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
     <!-- Custom styles for this template -->
     <link href="{% static 'core_blog/css/clean-blog.min.css' %}" rel="stylesheet">
-    <link href="{% static 'core_blog/css/github.css' %}" rel="stylesheet">
-    <link href="{% static 'app.min.css' %}" rel="stylesheet">
-
+    <link async href="{% static 'app.min.css' %}" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <link async href="{% static 'core_blog/css/github.css' %}" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    
+    <!-- Custom fonts for this template -->
+    <link href="{% static 'core_blog/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" media="none" onload="if(media!='all')media='all'">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css' media="none" onload="if(media!='all')media='all'">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' media="none" onload="if(media!='all')media='all'">
+    
     {% block css %}
     {% endblock css %}
 
@@ -97,7 +96,7 @@
     <script src="{% static 'core_blog/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'core_blog/js/clean-blog.min.js' %}"></script>
     <script src="{% static 'app.min.js' %}"></script>
-    <script src="{% static 'core_blog/js/highlight.pack.js' %}"></script>
+    <script async src="{% static 'core_blog/js/highlight.pack.js' %}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     {% if messages %}
