--- a/core_blog/templates/core_blog/about.html
+++ b/core_blog/templates/core_blog/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-  {{ page_title }} - {{ block.super }}
+  {{ page_title }} | {{ block.super }}
 {% endblock title %}
 
 {% block header %}
