--- a/core_blog/templates/core_blog/post_form.html
+++ b/core_blog/templates/core_blog/post_form.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-  {{ page_title }} - {{ block.super }}
+  {{ page_title }} | {{ block.super }}
 {% endblock title %}
 
 {% block css %}
